apps/10-home/mealie/overlays/dev/http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-http-redirect
  namespace: mealie
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mealie
                port:
                  number: 9000
