apps/10-home/mealie/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/name: Mealie
    gethomepage.dev/icon: mealie.svg
    gethomepage.dev/description: Recipe manager
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mealie
                port:
                  number: 9000
  tls:
    - secretName: mealie-tls-dev
      hosts:
        - mealie.dev.truxonline.com
